# BarLoyalty

./: .env.example  .gitignore  README.md  docker-compose.yml
gateway/: Dockerfile  HTTP.http  TEST.http  pom.xml
gateway/src/main/java/com/barLoyalty/gateway/: GatewayApplication.java
gateway/src/main/java/com/barLoyalty/gateway/config/: DbUserDetailsService.java  RestTemplateConfig.java  SecurityConfig.java  WebSocketConfig.java
gateway/src/main/java/com/barLoyalty/gateway/controller/: AuthController.java  TestController.java  TransactionController.java  UserController.java
gateway/src/main/java/com/barLoyalty/gateway/dto/: LoginRequest.java  MeResponse.java  RegisterRequest.java  TransactionRequest.java
gateway/src/main/java/com/barLoyalty/gateway/entity/: Bar.java  Reward.java  Role.java  Transaction.java  TransactionType.java  User.java
gateway/src/main/java/com/barLoyalty/gateway/repository/: TransactionRepository.java  UserRepository.java
gateway/src/main/java/com/barLoyalty/gateway/service/: AuthService.java  NotificationService.java  QrCodeService.java  TransactionService.java
gateway/src/main/resources/: application-local.properties  application.properties
gateway/src/main/resources/static/: index.html
gateway/src/test/java/com/barLoyalty/gateway/: GatewayApplicationTests.java
qr-service/: CMakeLists.txt  Dockerfile  main.cpp
